[package]
name = "arc-metrics"
version = "0.1.3"
edition = "2021"
description = "Composable metrics, application manually registers them"
repository = "https://github.com/Developed-Methods/arc-metrics"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pkg-details = "0.1"
